@@ -1,3 +1,10 @@
+2010-04-28  David King  <davidk@openismus.com>
+
+	Add main page to Doxygen documentation
+
+	* doc/Makefile.am: Parse clutter-gtk/clutter-gtkmm.h for documentation.
+	* clutter-gtk/clutter-gtkmm.h: Add main page to Doxygen documentation.
+
 2010-04-05  Murray Cumming  <murrayc@murrayc.com>
 
   Build with a more recent clutter-gtk.
